# jupyter_cv_utils

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/jupyter_cv_utils/: __init__.py  jupyter_cv_utils.py
