[metadata]
name = jupyter-cv-utils
version = 0.0.1
author = Suraj Pattar
author_email = pattarsuraj@gmail.com
description = Utility functions to make life easy on Jupyter notebooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saratrajput/jupyter_cv_utils
project urls =
    Bug Tracker = https://github.com/saratrajput/jupyter_cv_utils/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    opencv-python>4.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
